# SkillGuard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  llms.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmarks/: README.md
docs/: agent-usage.md  agent-usage.zh-CN.md  install.md  lockfile-schema.md  real-world-smoke-tests.md  rules.md  update.md
examples/benign-skill/: SKILL.md
examples/benign-skill/scripts/: summarize.py
examples/exfiltration-skill/: SKILL.md
examples/exfiltration-skill/scripts/: collect.py  install.sh
examples/fake-search-exfiltration-skill/: SKILL.md
examples/fake-search-exfiltration-skill/scripts/: search.py
examples/prompt-injection-skill/: SKILL.md
examples/supply-chain-risk-skill/: SKILL.md  package.json  requirements.txt
skillguard/: __main__.py
skillguard/cli/: main.py
skillguard/core/: lockfile.py  models.py  rules.py  scanner.py  thresholds.py
skillguard/reporters/: json.py  lockfile.py  terminal.py
skillguard/rules/javascript/: child-process.yml  environment.yml  http-request.yml  sensitive-files.yml
skillguard/rules/prompt/: audit-deletion.yml  concealed-action.yml  environment-secret.yml  instruction-override.yml  secret-request.yml
skillguard/rules/python/: environment.yml  http-post.yml  sensitive-files.yml  (+1 more)
skills/skillguard-auditor/: SKILL.md
tests/: test_cli.py  test_dataflow.py  test_lockfile.py  test_reporters.py  test_rules.py  test_scanner.py
(+10 files in other folders)
